src/test/deca/context/valid/created/wrong_decl2.deca
//Description
//    Vérifier la decl de var
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


{
float int = 3.0;
}
