src/test/deca/context/invalid/created/selection.deca
//Description :
// Test de  selection erronee
// Resultats :
// Erreur


class Premiere {
protected int a;
}

{
Premiere prem = new Premiere();
print(prem.a);
}
